<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".Fragment.RegisterFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/username"
      android:hint="@string/username"/>
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:id="@+id/password"
      android:hint="@string/password"/>
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/email"
      android:inputType="textEmailAddress"
      android:hint="@string/email"/>

    <com.makeramen.roundedimageview.RoundedImageView
      android:layout_width="@dimen/_100sdp"
      android:layout_height="@dimen/_100sdp"
      app:riv_corner_radius="@dimen/_200sdp"
      android:src="@drawable/avatar"
      android:id="@+id/avatar"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register"
      android:id="@+id/btn_register"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/delete"
      android:id="@+id/btn_delete"/>

  </LinearLayout>

</FrameLayout>