<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Fragment.LoginFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/username"
      android:hint="@string/username"/>
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/password"
      android:inputType="textPassword"
      android:hint="@string/password"/>
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:id="@+id/btn_login"/>

  </LinearLayout>

</FrameLayout>