<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
  tools:context=".Fragment.RankFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_margin="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rank"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/primary_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp">

      <com.google.android.material.tabs.TabLayout
          android:id="@+id/tab_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:background="@color/primary"
          app:tabBackground="@drawable/tab_selector"
          app:tabIndicatorColor="@color/primary_text"
          app:tabRippleColor="@null"
          app:tabSelectedTextColor="@color/primary_text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_day" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_month" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_year" />

      </com.google.android.material.tabs.TabLayout>

      <androidx.viewpager2.widget.ViewPager2
          android:id="@+id/viewpager"
          android:layout_marginVertical="@dimen/_5sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/tab_layout">

      </androidx.viewpager2.widget.ViewPager2>

    </RelativeLayout>
  </LinearLayout>

</FrameLayout>