<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:scrollbars="none"
  android:fillViewport="true"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primary">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
          android:id="@+id/btn_go_back"
          android:layout_width="@dimen/_20sdp"
          android:layout_height="@dimen/_20sdp"
          android:layout_alignTop="@+id/cardview"
          android:layout_alignBottom="@+id/cardview"
          android:layout_margin="@dimen/_5sdp"
          android:src="@drawable/ic_goback">

      </ImageView>
      <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_toEndOf="@id/btn_go_back"
        app:cardBackgroundColor="@color/primary"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <ImageView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_find">

          </ImageView>

          <EditText
              android:layout_toStartOf="@id/btn_search"
              android:id="@+id/edt_search"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/_5sdp"
              android:layout_marginTop="@dimen/_5sdp"
              android:layout_marginEnd="@dimen/_5sdp"
              android:layout_marginBottom="@dimen/_5sdp"
              android:backgroundTint="@color/primary_text"
              android:hint="@string/search"
              android:singleLine="true"
              android:textColor="@color/primary_text"
              android:textCursorDrawable="@drawable/edittext"
              tools:ignore="UnusedAttribute" />

        </RelativeLayout>

      </androidx.cardview.widget.CardView>
    </RelativeLayout>


    <TextView
      android:id="@+id/history"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:text="@string/history_search"
      android:textColor="@color/primary_text">

    </TextView>

    <com.nex3z.flowlayout.FlowLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:flChildSpacingForLastRow="align"
        app:flMaxRows="3"
        app:flRowSpacing="8dp">

    </com.nex3z.flowlayout.FlowLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
      android:id="@+id/shimmer_layout_top_search"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      <include layout="@layout/shimmer_layout_1"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_top_search"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:orientation="horizontal" />


    <LinearLayout
      android:orientation="vertical"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
        android:weightSum="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">
        <com.google.android.material.textfield.TextInputLayout
          android:layout_weight="1"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
          android:id="@+id/txt_layout_status"
          android:hint="@string/status"
          app:boxStrokeColor="@color/secondary_text"
          app:hintTextColor="@color/secondary_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_5sdp">

          <AutoCompleteTextView
            android:id="@+id/status"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/all"
            android:inputType="none">

          </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:layout_weight="1"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
          android:id="@+id/txt_layout_type"
          android:hint="@string/type"
          app:boxStrokeColor="@color/secondary_text"
          app:hintTextColor="@color/secondary_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_5sdp">

          <AutoCompleteTextView
            android:id="@+id/type"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/all"
            android:inputType="none">

          </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>
      <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/primary"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp">
        <TextView
          android:id="@+id/genre"
            android:textColor="@color/primary_text"
          android:layout_margin="@dimen/_10sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/genre"/>
      </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
      android:id="@+id/shimmer_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <include layout="@layout/shimmer_layout_2"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler"
      android:visibility="gone"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_400sdp"
      android:layout_marginStart="5dp"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="5dp"
      android:layout_marginBottom="5dp">

    </androidx.recyclerview.widget.RecyclerView>

  </LinearLayout>

</ScrollView>